Fix: Final resolution for Inventory Sync and Dashboard Data Discrepancy